<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/inp_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:autofillHints=""
            android:background="@drawable/bg_rounded_edit_text"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundMode="none"
            app:boxBackgroundColor="@android:color/transparent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_edit_text"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_create_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_now"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>