<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inp_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/bg_rounded_edit_text"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/bg_rounded_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inp_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/bg_rounded_edit_text"
                android:hint="@string/re_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/inp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/bg_rounded_edit_text"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/bg_rounded_button"
            android:text="@string/signup"
            android:textColor="@color/white" />

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>