<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_task.DetailTaskActivity">

    <RelativeLayout
        android:id="@+id/rel_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/green"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

    </RelativeLayout>

    <View
        android:id="@+id/view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rel_toolbar"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/lin_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_toolbar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inp_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/bg_rounded_edit_text"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <EditText
            android:id="@+id/inp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/bg_rounded_edit_text"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/inp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bg_rounded_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_rounded_button"
        android:text="@string/save"
        android:textColor="@color/white" />

</RelativeLayout>
